<resources>
    <string name="app_name">Denton Masjid</string>
    <string name="prayer_times">Prayer Times</string>
    <string name="calendar">Events Calendar</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="hadeeth">Hadeeth</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>